# Obsidian-note-linker

./: AGENTS.md  README.md  pyproject.toml
.current_agent_context/: dev_notes.md  features_list.json
docs/llm_prompts_archive/: 1_problem_statement.md  2_chatgpt_improved_problem_statement.md  3_app_requirements.md  4_improved_based_on_llm_assessment.md  5_refined_requirements.md  6_add_additional_feature_doc_search.md
src/obsidian_note_linker/: __init__.py  __main__.py
src/obsidian_note_linker/api/: __init__.py  app.py
src/obsidian_note_linker/domain/: __init__.py  candidate.py  config.py  embedding_provider.py  markdown_stripper.py  note.py  ranking.py  related_section_parser.py
src/obsidian_note_linker/infrastructure/: __init__.py  bm25_index.py  config_store.py  database.py  decision_store.py  embedding_store.py  logging.yaml  logging_setup.py  model2vec_provider.py  models.py  note_store.py  similarity.py  vault_scanner.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_indexing_routes.py  test_routes.py
tests/domain/: test_candidate.py  test_config.py  test_embedding_provider.py  test_markdown_stripper.py  test_note.py  test_ranking.py  test_related_section_parser.py
tests/infrastructure/: test_bm25_index.py  test_config_store.py  test_database.py  test_decision_store.py  test_embedding_store.py  test_logging_setup.py  test_model2vec_provider.py  test_models.py  test_note_store.py  test_similarity.py  test_vault_scanner.py
tests/services/: test_candidate_service.py  test_config_service.py  test_indexing_service.py  test_vault_init.py
(+12 files in other folders)
