[project]
name = "obsidian-note-linker"
version = "0.1.0"
description = "Discover, review, and create bidirectional links between related Obsidian notes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.3",
    "model2vec>=0.7.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.32",
]

[project.scripts]
obsidian-linker = "obsidian_note_linker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_note_linker"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "wat-inspector>=0.4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
